--- a/tesi.html
+++ b/tesi.html
@@ -10,7 +10,7 @@
 		<div id="maindiv">
 			<a href="index.html">Home</a>
 			<h1>Linee guida per la stesura della Tesi di Laurea</h1>
-			<sup>Aggiornate al 24 Luglio 2025</sup><br/>
+			<sup>Aggiornate al 20 Gennaio 2026</sup><br/>
 			Queste linee guida coprono la richiesta e la
 			consegna della tesi di laurea in Universitas Mercatorum.
 			<b>Nota Bene:</b> Si prega di far riferimento
@@ -31,6 +31,7 @@
 			10/15 documenti, non fermatevi già a questo. :)
 			<ol>
 				<li><a href=#scadenze>Scadenze</a></li>
+				<li><a href=#tema>Scelta del Tema</a></li>
 				<li><a href=#richiesta>Richiesta della tesi</a></li>
 				<li><a href=#comunicazione>Comunicazione</a></li>
 				<li><a href=#scrittura>Scrittura</a></li>
@@ -60,6 +61,29 @@
 			essere rifiutata e annullata la partecipazione alla sessione.
 			<br/>
 			<br/>
+			<h2 id=tema>Scelta del tema</h2>
+			Il campo della cybersecurity è molto vasto. Ci sono varie scelte possibili di temi:
+			<ol>
+				<li>Scelta libera basata su alcuni articoli che potete trovare su scholar.google.com (almeno 2 e recenti, massimo di 5 anni fa).</li>
+				<li>Scelta personale basata su temi di interesse (e.g. cosa fate a lavoro).</li>
+				<li>Scelta riguardante i miei temi di ricerca.</li>
+			</ol>
+			Per quanto riguarda la scelta 1. è necessario inviare
+			due link o nomi di paper che intendete analizzare per
+			svolgere la tesi. La scelta 2 richiede una
+			presentazione da parte vostra di almeno 5/6 righe
+			riguardante perché è interessante (per la
+			cybersecurity) quello che fate a lavoro. La scelta 3
+			invece richiede l'analisi dei miei temi di ricerca (che
+			trovate sulla home di questo sito) indicando cosa
+			vorreste esplorare di questi (anche qui 5/6 righe vanno bene).
+			<br/>
+			Come consiglio personale: <b>NON</b> usate
+			l'intelligenza artificiale per scrivermi le email. Me
+			ne accorgo abbastanza spesso e non lo ritengo
+			professionale, nonostante il linguaggio sia
+			particolarmente aulico e bello da vedere. :)
+			<br/>
 			<h2 id=richiesta>Richiesta della tesi</h2>
 			Per richiedere la tesi è necessario inviare (<u>possibilmente dal vostro indirizzo
 			istituzionale @studenti.unimercatorum.it</u>) una
@@ -70,7 +94,7 @@
 				<li>Nome e cognome</li>
 				<li>Sessione di laurea</li>
 				<li>Tipologia di tesi¹</li>
-				<li>Tema di riferimento²</li>
+				<li>Tema di riferimento</li>
 			</ul>
 			<br/>
 			Le comunicazioni riguardanti la tesi devono essere inviate
@@ -91,14 +115,6 @@
 			sistemi operativi embedded". Le seconde
 			ovviamente possono ambire (in media, non è una
 			regola) a punteggi più alti.
-			<br/>
-			<br/>
-			² La materia della sicurezza informatica è
-			molto vasta, non è possibile svolgere una tesi
-			nel campo della sicurezza senza verticalizzarlo un
-			attimo.  Potete prendere come riferimento i temi del
-			corso, altrimenti proporne uno voi, basato su esperienze o
-			interessi personali.
 			<br/>
 			<br/>
 			<h2 id=comunicazione>Comunicazione</h2>
