--- a/tesi.html
+++ b/tesi.html
@@ -10,7 +10,7 @@
 		<div id="maindiv">
 			<a href="index.html">Home</a>
 			<h1>Linee guida per la stesura della Tesi di Laurea</h1>
-			<sup>Aggiornate al 20 Gennaio 2026</sup><br/>
+			<sup>Aggiornate al 11 Febbraio 2026</sup><br/>
 			Queste linee guida coprono la richiesta e la
 			consegna della tesi di laurea in Universitas Mercatorum.
 			<b>Nota Bene:</b> Si prega di far riferimento
@@ -268,6 +268,30 @@
 						per motivi di tempo o
 						limitazioni
 						hardware).</li><br/>
+					<li>
+						Come potete notare <b>NON</b> ho indicato sotto-capitoli o, ancora peggio, sotto-sotto capitoli. Vediamo un esempio (sbagliato) generato usando ChatGPT:<br/>
+						<img src="data/chatgpt3.png" alt="Dialogo con ChatGPT"/><br/>
+						A parte l'estrema generalità del tema che già non sarebbe
+						adatto a una tesi magistrale, ahimé l'indice continuava fino a 10 capitoli.
+						Perché è sbagliato? È molto
+						semplice, se pensate a quando
+						leggete un libro, trovate un
+						capitolo ogni 10 pagine o più,
+						in questo caso, supponendo di
+						avere una tesi di circa 50
+						pagine, avremmo un capitolo
+						ogni 5, che già risulta essere
+						anomalo. Inoltre, con questa
+						divisione in sotto-capitoli,
+						avremmo un sotto-capitolo ogni
+						pagina...o ancora peggio: più
+						sotto-capitoli per pagina...<br/>
+						In sostanza, potete farvi aiutare nella
+						stesura dell'indice da ChatGPT ma, a questo punto,
+						se dovete correggerlo continuamente per avere un
+						indice che vada bene, non è più semplice scriverlo
+						voi basandovi sulle informazioni che avete?
+					</li><br/>
 				<li> La tesi prevede una bibliografia,
 					normalmente è necessario
 					raccogliere questa prima della
